--- a/.env.vercel.example
+++ b/.env.vercel.example
@@ -37,13 +37,13 @@ DB_PORT_SKINS=3306
 
 APP_DEBUG=false
 APP_NAME='css-bans'
-APP_URL=                                        # Your site address dont add / at end ex: https://mysite.com
-DB_HOST=                                        # CSS BANS DB For Simple Admin Plugin
-DB_DATABASE=
-DB_USERNAME=
-DB_PASSWORD=
-STEAM_CLIENT_SECRET=                            # Steam Web API KEY
-RCON_PASSWORD=                                  # RCON Password for live bans,mutes,kicks
+APP_URL=https://css-bans-82a54e65a-matrixcs2s-projects.vercel.app/                                        # Your site address dont add / at end ex: https://mysite.com
+DB_HOST=89.144.25.216                                        # CSS BANS DB For Simple Admin Plugin
+DB_DATABASE=s10_MatrixAdmin
+DB_USERNAME=u10_PNd09uIr1s
+DB_PASSWORD=P6pKaCwEn=kA+JVKjAFGsfTj
+STEAM_CLIENT_SECRET=B1144985C31E1E6B52062B2174C97903                            # Steam Web API KEY
+RCON_PASSWORD=82hAB4nsmatrix                                  # RCON Password for live bans,mutes,kicks
 STEAM_REDIRECT_URI=${APP_URL}/auth/steam/callback  # Replace ${APP_URL} with your actual site address https://mysite.com
 ASSET_URL=${APP_URL} # Replace ${APP_URL} with your actual site address https://mysite.com
 
