--- a/.env.vercel.example
+++ b/.env.vercel.example
@@ -56,7 +56,7 @@ ASSET_URL=${APP_URL} # Replace ${APP_URL} with your actual site address https://
 LOGO_NAME="CSS-BANS"
 VITE_SITE_DIR=
 APP_ENV=production
-APP_KEY=
+APP_KEY=JA72nDS27FSNabAUS2JS
 APP_VERSION=1.1.0
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
